<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.buenodelivery.kitchen.activities.extras.AboutUsActivity">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/partner"
            />

        <com.buenodelivery.kitchen.views.font.CustomFontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/partner_text_1"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.buenodelivery.kitchen.views.font.CustomFontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/partner_text_2"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/partner_text_3"/>

        </LinearLayout>

        <com.buenodelivery.kitchen.views.font.CustomFontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/partner_text_4"/>



    </LinearLayout>






</ScrollView>
